exports[`test will get everything needed in an introspection 1`] = `
Object {
  "attributes": Array [
    Object {
      "classId": "compound_key",
      "description": null,
      "hasDefault": false,
      "isNotNull": true,
      "kind": "attribute",
      "name": "person_id_2",
      "num": 1,
      "typeId": "int4",
    },
    Object {
      "classId": "compound_key",
      "description": null,
      "hasDefault": false,
      "isNotNull": true,
      "kind": "attribute",
      "name": "person_id_1",
      "num": 2,
      "typeId": "int4",
    },
    Object {
      "classId": "compound_key",
      "description": null,
      "hasDefault": false,
      "isNotNull": false,
      "kind": "attribute",
      "name": "extra",
      "num": 3,
      "typeId": "bool",
    },
    Object {
      "classId": "compound_type",
      "description": null,
      "hasDefault": false,
      "isNotNull": false,
      "kind": "attribute",
      "name": "a",
      "num": 1,
      "typeId": "int4",
    },
    Object {
      "classId": "compound_type",
      "description": null,
      "hasDefault": false,
      "isNotNull": false,
      "kind": "attribute",
      "name": "b",
      "num": 2,
      "typeId": "text",
    },
    Object {
      "classId": "compound_type",
      "description": null,
      "hasDefault": false,
      "isNotNull": false,
      "kind": "attribute",
      "name": "c",
      "num": 3,
      "typeId": "color",
    },
    Object {
      "classId": "compound_type",
      "description": null,
      "hasDefault": false,
      "isNotNull": false,
      "kind": "attribute",
      "name": "d",
      "num": 4,
      "typeId": "uuid",
    },
    Object {
      "classId": "compound_type",
      "description": null,
      "hasDefault": false,
      "isNotNull": false,
      "kind": "attribute",
      "name": "foo_bar",
      "num": 5,
      "typeId": "int4",
    },
    Object {
      "classId": "foreign_key",
      "description": null,
      "hasDefault": false,
      "isNotNull": false,
      "kind": "attribute",
      "name": "person_id",
      "num": 1,
      "typeId": "int4",
    },
    Object {
      "classId": "foreign_key",
      "description": null,
      "hasDefault": false,
      "isNotNull": false,
      "kind": "attribute",
      "name": "compound_key_1",
      "num": 2,
      "typeId": "int4",
    },
    Object {
      "classId": "foreign_key",
      "description": null,
      "hasDefault": false,
      "isNotNull": false,
      "kind": "attribute",
      "name": "compound_key_2",
      "num": 3,
      "typeId": "int4",
    },
    Object {
      "classId": "nested_compound_type",
      "description": null,
      "hasDefault": false,
      "isNotNull": false,
      "kind": "attribute",
      "name": "a",
      "num": 1,
      "typeId": "compound_type",
    },
    Object {
      "classId": "nested_compound_type",
      "description": null,
      "hasDefault": false,
      "isNotNull": false,
      "kind": "attribute",
      "name": "b",
      "num": 2,
      "typeId": "compound_type",
    },
    Object {
      "classId": "nested_compound_type",
      "description": null,
      "hasDefault": false,
      "isNotNull": false,
      "kind": "attribute",
      "name": "baz_buz",
      "num": 3,
      "typeId": "int4",
    },
    Object {
      "classId": "non_updatable_view",
      "description": null,
      "hasDefault": false,
      "isNotNull": false,
      "kind": "attribute",
      "name": "?column?",
      "num": 1,
      "typeId": "int4",
    },
    Object {
      "classId": "person",
      "description": null,
      "hasDefault": true,
      "isNotNull": true,
      "kind": "attribute",
      "name": "id",
      "num": 1,
      "typeId": "int4",
    },
    Object {
      "classId": "person",
      "description": "The person’s name",
      "hasDefault": false,
      "isNotNull": true,
      "kind": "attribute",
      "name": "name",
      "num": 2,
      "typeId": "varchar",
    },
    Object {
      "classId": "person",
      "description": null,
      "hasDefault": false,
      "isNotNull": false,
      "kind": "attribute",
      "name": "about",
      "num": 3,
      "typeId": "text",
    },
    Object {
      "classId": "person",
      "description": null,
      "hasDefault": false,
      "isNotNull": true,
      "kind": "attribute",
      "name": "email",
      "num": 4,
      "typeId": "email",
    },
    Object {
      "classId": "person",
      "description": null,
      "hasDefault": true,
      "isNotNull": false,
      "kind": "attribute",
      "name": "created_at",
      "num": 5,
      "typeId": "timestamp",
    },
    Object {
      "classId": "post",
      "description": null,
      "hasDefault": true,
      "isNotNull": true,
      "kind": "attribute",
      "name": "id",
      "num": 1,
      "typeId": "int4",
    },
    Object {
      "classId": "post",
      "description": null,
      "hasDefault": false,
      "isNotNull": true,
      "kind": "attribute",
      "name": "headline",
      "num": 2,
      "typeId": "text",
    },
    Object {
      "classId": "post",
      "description": null,
      "hasDefault": false,
      "isNotNull": false,
      "kind": "attribute",
      "name": "body",
      "num": 3,
      "typeId": "text",
    },
    Object {
      "classId": "post",
      "description": null,
      "hasDefault": false,
      "isNotNull": false,
      "kind": "attribute",
      "name": "author_id",
      "num": 4,
      "typeId": "int4",
    },
    Object {
      "classId": "types",
      "description": null,
      "hasDefault": true,
      "isNotNull": true,
      "kind": "attribute",
      "name": "id",
      "num": 1,
      "typeId": "int4",
    },
    Object {
      "classId": "types",
      "description": null,
      "hasDefault": false,
      "isNotNull": true,
      "kind": "attribute",
      "name": "jsonb",
      "num": 10,
      "typeId": "jsonb",
    },
    Object {
      "classId": "types",
      "description": null,
      "hasDefault": false,
      "isNotNull": true,
      "kind": "attribute",
      "name": "compound_type",
      "num": 11,
      "typeId": "compound_type",
    },
    Object {
      "classId": "types",
      "description": null,
      "hasDefault": false,
      "isNotNull": true,
      "kind": "attribute",
      "name": "nested_compound_type",
      "num": 12,
      "typeId": "nested_compound_type",
    },
    Object {
      "classId": "types",
      "description": null,
      "hasDefault": false,
      "isNotNull": true,
      "kind": "attribute",
      "name": "bigint",
      "num": 2,
      "typeId": "int8",
    },
    Object {
      "classId": "types",
      "description": null,
      "hasDefault": false,
      "isNotNull": true,
      "kind": "attribute",
      "name": "boolean",
      "num": 3,
      "typeId": "bool",
    },
    Object {
      "classId": "types",
      "description": null,
      "hasDefault": false,
      "isNotNull": true,
      "kind": "attribute",
      "name": "varchar",
      "num": 4,
      "typeId": "varchar",
    },
    Object {
      "classId": "types",
      "description": null,
      "hasDefault": false,
      "isNotNull": true,
      "kind": "attribute",
      "name": "enum",
      "num": 5,
      "typeId": "color",
    },
    Object {
      "classId": "types",
      "description": null,
      "hasDefault": false,
      "isNotNull": true,
      "kind": "attribute",
      "name": "domain",
      "num": 6,
      "typeId": "an_int",
    },
    Object {
      "classId": "types",
      "description": null,
      "hasDefault": false,
      "isNotNull": true,
      "kind": "attribute",
      "name": "domain2",
      "num": 7,
      "typeId": "another_int",
    },
    Object {
      "classId": "types",
      "description": null,
      "hasDefault": false,
      "isNotNull": true,
      "kind": "attribute",
      "name": "text_array",
      "num": 8,
      "typeId": "_text",
    },
    Object {
      "classId": "types",
      "description": null,
      "hasDefault": false,
      "isNotNull": true,
      "kind": "attribute",
      "name": "json",
      "num": 9,
      "typeId": "json",
    },
    Object {
      "classId": "updatable_view",
      "description": null,
      "hasDefault": false,
      "isNotNull": false,
      "kind": "attribute",
      "name": "x",
      "num": 1,
      "typeId": "int4",
    },
    Object {
      "classId": "updatable_view",
      "description": null,
      "hasDefault": false,
      "isNotNull": false,
      "kind": "attribute",
      "name": "name",
      "num": 2,
      "typeId": "varchar",
    },
    Object {
      "classId": "updatable_view",
      "description": null,
      "hasDefault": false,
      "isNotNull": false,
      "kind": "attribute",
      "name": "description",
      "num": 3,
      "typeId": "text",
    },
    Object {
      "classId": "updatable_view",
      "description": "This is constantly 2",
      "hasDefault": false,
      "isNotNull": false,
      "kind": "attribute",
      "name": "constant",
      "num": 4,
      "typeId": "int4",
    },
  ],
  "classes": Array [
    Object {
      "description": null,
      "id": "compound_key",
      "isDeletable": true,
      "isInsertable": true,
      "isSelectable": true,
      "isUpdatable": true,
      "kind": "class",
      "name": "compound_key",
      "namespaceId": "c",
      "typeId": "compound_key",
    },
    Object {
      "description": null,
      "id": "compound_type",
      "isDeletable": false,
      "isInsertable": false,
      "isSelectable": false,
      "isUpdatable": false,
      "kind": "class",
      "name": "compound_type",
      "namespaceId": "c",
      "typeId": "compound_type",
    },
    Object {
      "description": null,
      "id": "foreign_key",
      "isDeletable": true,
      "isInsertable": true,
      "isSelectable": true,
      "isUpdatable": true,
      "kind": "class",
      "name": "foreign_key",
      "namespaceId": "a",
      "typeId": "foreign_key",
    },
    Object {
      "description": null,
      "id": "nested_compound_type",
      "isDeletable": false,
      "isInsertable": false,
      "isSelectable": false,
      "isUpdatable": false,
      "kind": "class",
      "name": "nested_compound_type",
      "namespaceId": "b",
      "typeId": "nested_compound_type",
    },
    Object {
      "description": null,
      "id": "non_updatable_view",
      "isDeletable": false,
      "isInsertable": false,
      "isSelectable": true,
      "isUpdatable": false,
      "kind": "class",
      "name": "non_updatable_view",
      "namespaceId": "a",
      "typeId": "non_updatable_view",
    },
    Object {
      "description": "Person test comment",
      "id": "person",
      "isDeletable": true,
      "isInsertable": true,
      "isSelectable": true,
      "isUpdatable": true,
      "kind": "class",
      "name": "person",
      "namespaceId": "c",
      "typeId": "person",
    },
    Object {
      "description": null,
      "id": "post",
      "isDeletable": true,
      "isInsertable": true,
      "isSelectable": true,
      "isUpdatable": true,
      "kind": "class",
      "name": "post",
      "namespaceId": "a",
      "typeId": "post",
    },
    Object {
      "description": null,
      "id": "types",
      "isDeletable": true,
      "isInsertable": true,
      "isSelectable": true,
      "isUpdatable": true,
      "kind": "class",
      "name": "types",
      "namespaceId": "b",
      "typeId": "types",
    },
    Object {
      "description": "YOYOYO!!",
      "id": "updatable_view",
      "isDeletable": true,
      "isInsertable": true,
      "isSelectable": true,
      "isUpdatable": true,
      "kind": "class",
      "name": "updatable_view",
      "namespaceId": "b",
      "typeId": "updatable_view",
    },
  ],
  "constraints": Array [
    Object {
      "classId": "person",
      "foreignClassId": null,
      "foreignKeyAttributeNums": null,
      "keyAttributeNums": Array [
        4,
      ],
      "kind": "constraint",
      "name": "person_email_key",
      "type": "u",
    },
    Object {
      "classId": "person",
      "foreignClassId": null,
      "foreignKeyAttributeNums": null,
      "keyAttributeNums": Array [
        1,
      ],
      "kind": "constraint",
      "name": "person_pkey",
      "type": "p",
    },
    Object {
      "classId": "post",
      "foreignClassId": "person",
      "foreignKeyAttributeNums": Array [
        1,
      ],
      "keyAttributeNums": Array [
        4,
      ],
      "kind": "constraint",
      "name": "post_author_id_fkey",
      "type": "f",
    },
    Object {
      "classId": "post",
      "foreignClassId": null,
      "foreignKeyAttributeNums": null,
      "keyAttributeNums": Array [
        1,
      ],
      "kind": "constraint",
      "name": "post_pkey",
      "type": "p",
    },
    Object {
      "classId": "compound_key",
      "foreignClassId": "person",
      "foreignKeyAttributeNums": Array [
        1,
      ],
      "keyAttributeNums": Array [
        2,
      ],
      "kind": "constraint",
      "name": "compound_key_person_id_1_fkey",
      "type": "f",
    },
    Object {
      "classId": "compound_key",
      "foreignClassId": "person",
      "foreignKeyAttributeNums": Array [
        1,
      ],
      "keyAttributeNums": Array [
        1,
      ],
      "kind": "constraint",
      "name": "compound_key_person_id_2_fkey",
      "type": "f",
    },
    Object {
      "classId": "compound_key",
      "foreignClassId": null,
      "foreignKeyAttributeNums": null,
      "keyAttributeNums": Array [
        2,
        1,
      ],
      "kind": "constraint",
      "name": "compound_key_pkey",
      "type": "p",
    },
    Object {
      "classId": "foreign_key",
      "foreignClassId": "compound_key",
      "foreignKeyAttributeNums": Array [
        2,
        1,
      ],
      "keyAttributeNums": Array [
        2,
        3,
      ],
      "kind": "constraint",
      "name": "foreign_key_compound_key_1_fkey",
      "type": "f",
    },
    Object {
      "classId": "foreign_key",
      "foreignClassId": "person",
      "foreignKeyAttributeNums": Array [
        1,
      ],
      "keyAttributeNums": Array [
        1,
      ],
      "kind": "constraint",
      "name": "foreign_key_person_id_fkey",
      "type": "f",
    },
    Object {
      "classId": "types",
      "foreignClassId": null,
      "foreignKeyAttributeNums": null,
      "keyAttributeNums": Array [
        1,
      ],
      "kind": "constraint",
      "name": "types_pkey",
      "type": "p",
    },
  ],
  "namespaces": Array [
    Object {
      "description": "The a schema.",
      "id": "a",
      "kind": "namespace",
      "name": "a",
    },
    Object {
      "description": "qwerty",
      "id": "b",
      "kind": "namespace",
      "name": "b",
    },
    Object {
      "description": null,
      "id": "c",
      "kind": "namespace",
      "name": "c",
    },
  ],
  "procedure": Array [
    Object {
      "argDefaultsNum": 0,
      "argNames": Array [],
      "argTypeIds": Array [
        "int4",
        "int4",
      ],
      "description": "lol, add some stuff 1 mutation",
      "isStable": false,
      "isStrict": true,
      "kind": "procedure",
      "name": "add_1_mutation",
      "namespaceId": "a",
      "returnTypeId": "int4",
      "returnsSet": false,
    },
    Object {
      "argDefaultsNum": 0,
      "argNames": Array [],
      "argTypeIds": Array [
        "int4",
        "int4",
      ],
      "description": "lol, add some stuff 1 query",
      "isStable": true,
      "isStrict": true,
      "kind": "procedure",
      "name": "add_1_query",
      "namespaceId": "a",
      "returnTypeId": "int4",
      "returnsSet": false,
    },
    Object {
      "argDefaultsNum": 1,
      "argNames": Array [
        "a",
        "b",
      ],
      "argTypeIds": Array [
        "int4",
        "int4",
      ],
      "description": "lol, add some stuff 2 mutation",
      "isStable": false,
      "isStrict": true,
      "kind": "procedure",
      "name": "add_2_mutation",
      "namespaceId": "a",
      "returnTypeId": "int4",
      "returnsSet": false,
    },
    Object {
      "argDefaultsNum": 1,
      "argNames": Array [
        "a",
        "b",
      ],
      "argTypeIds": Array [
        "int4",
        "int4",
      ],
      "description": "lol, add some stuff 2 query",
      "isStable": true,
      "isStrict": true,
      "kind": "procedure",
      "name": "add_2_query",
      "namespaceId": "a",
      "returnTypeId": "int4",
      "returnsSet": false,
    },
    Object {
      "argDefaultsNum": 0,
      "argNames": Array [
        "a",
        "",
      ],
      "argTypeIds": Array [
        "int4",
        "int4",
      ],
      "description": "lol, add some stuff 3 mutation",
      "isStable": false,
      "isStrict": false,
      "kind": "procedure",
      "name": "add_3_mutation",
      "namespaceId": "a",
      "returnTypeId": "int4",
      "returnsSet": false,
    },
    Object {
      "argDefaultsNum": 0,
      "argNames": Array [
        "a",
        "",
      ],
      "argTypeIds": Array [
        "int4",
        "int4",
      ],
      "description": "lol, add some stuff 3 query",
      "isStable": true,
      "isStrict": false,
      "kind": "procedure",
      "name": "add_3_query",
      "namespaceId": "a",
      "returnTypeId": "int4",
      "returnsSet": false,
    },
    Object {
      "argDefaultsNum": 1,
      "argNames": Array [
        "",
        "b",
      ],
      "argTypeIds": Array [
        "int4",
        "int4",
      ],
      "description": "lol, add some stuff 4 mutation",
      "isStable": false,
      "isStrict": false,
      "kind": "procedure",
      "name": "add_4_mutation",
      "namespaceId": "a",
      "returnTypeId": "int4",
      "returnsSet": false,
    },
    Object {
      "argDefaultsNum": 1,
      "argNames": Array [
        "",
        "b",
      ],
      "argTypeIds": Array [
        "int4",
        "int4",
      ],
      "description": "lol, add some stuff 4 query",
      "isStable": true,
      "isStrict": false,
      "kind": "procedure",
      "name": "add_4_query",
      "namespaceId": "a",
      "returnTypeId": "int4",
      "returnsSet": false,
    },
    Object {
      "argDefaultsNum": 2,
      "argNames": Array [
        "post",
        "length",
        "omission",
      ],
      "argTypeIds": Array [
        "post",
        "int4",
        "text",
      ],
      "description": null,
      "isStable": true,
      "isStrict": false,
      "kind": "procedure",
      "name": "post_headline_trimmed",
      "namespaceId": "a",
      "returnTypeId": "text",
      "returnsSet": false,
    },
    Object {
      "argDefaultsNum": 0,
      "argNames": Array [
        "object",
      ],
      "argTypeIds": Array [
        "compound_type",
      ],
      "description": null,
      "isStable": false,
      "isStrict": false,
      "kind": "procedure",
      "name": "compound_type_mutation",
      "namespaceId": "b",
      "returnTypeId": "compound_type",
      "returnsSet": false,
    },
    Object {
      "argDefaultsNum": 0,
      "argNames": Array [
        "object",
      ],
      "argTypeIds": Array [
        "compound_type",
      ],
      "description": null,
      "isStable": true,
      "isStrict": false,
      "kind": "procedure",
      "name": "compound_type_query",
      "namespaceId": "b",
      "returnTypeId": "compound_type",
      "returnsSet": false,
    },
    Object {
      "argDefaultsNum": 0,
      "argNames": Array [],
      "argTypeIds": Array [
        "int4",
        "int4",
      ],
      "description": null,
      "isStable": false,
      "isStrict": false,
      "kind": "procedure",
      "name": "mult_1",
      "namespaceId": "b",
      "returnTypeId": "int4",
      "returnsSet": false,
    },
    Object {
      "argDefaultsNum": 0,
      "argNames": Array [],
      "argTypeIds": Array [
        "int4",
        "int4",
      ],
      "description": null,
      "isStable": false,
      "isStrict": false,
      "kind": "procedure",
      "name": "mult_2",
      "namespaceId": "b",
      "returnTypeId": "int4",
      "returnsSet": false,
    },
    Object {
      "argDefaultsNum": 0,
      "argNames": Array [],
      "argTypeIds": Array [
        "int4",
        "int4",
      ],
      "description": null,
      "isStable": false,
      "isStrict": true,
      "kind": "procedure",
      "name": "mult_3",
      "namespaceId": "b",
      "returnTypeId": "int4",
      "returnsSet": false,
    },
    Object {
      "argDefaultsNum": 0,
      "argNames": Array [],
      "argTypeIds": Array [
        "int4",
        "int4",
      ],
      "description": null,
      "isStable": false,
      "isStrict": true,
      "kind": "procedure",
      "name": "mult_4",
      "namespaceId": "b",
      "returnTypeId": "int4",
      "returnsSet": false,
    },
    Object {
      "argDefaultsNum": 0,
      "argNames": Array [
        "compound_type",
      ],
      "argTypeIds": Array [
        "compound_type",
      ],
      "description": null,
      "isStable": true,
      "isStrict": false,
      "kind": "procedure",
      "name": "compound_type_computed_field",
      "namespaceId": "c",
      "returnTypeId": "int4",
      "returnsSet": false,
    },
    Object {
      "argDefaultsNum": 0,
      "argNames": Array [
        "x",
        "y",
        "z",
      ],
      "argTypeIds": Array [
        "int4",
        "int4",
        "int4",
      ],
      "description": null,
      "isStable": false,
      "isStrict": false,
      "kind": "procedure",
      "name": "int_set_mutation",
      "namespaceId": "c",
      "returnTypeId": "int4",
      "returnsSet": true,
    },
    Object {
      "argDefaultsNum": 0,
      "argNames": Array [
        "x",
        "y",
        "z",
      ],
      "argTypeIds": Array [
        "int4",
        "int4",
        "int4",
      ],
      "description": null,
      "isStable": true,
      "isStrict": false,
      "kind": "procedure",
      "name": "int_set_query",
      "namespaceId": "c",
      "returnTypeId": "int4",
      "returnsSet": true,
    },
    Object {
      "argDefaultsNum": 0,
      "argNames": Array [],
      "argTypeIds": Array [],
      "description": null,
      "isStable": false,
      "isStrict": false,
      "kind": "procedure",
      "name": "no_args_mutation",
      "namespaceId": "c",
      "returnTypeId": "int4",
      "returnsSet": false,
    },
    Object {
      "argDefaultsNum": 0,
      "argNames": Array [],
      "argTypeIds": Array [],
      "description": null,
      "isStable": true,
      "isStrict": false,
      "kind": "procedure",
      "name": "no_args_query",
      "namespaceId": "c",
      "returnTypeId": "int4",
      "returnsSet": false,
    },
    Object {
      "argDefaultsNum": 0,
      "argNames": Array [
        "person",
      ],
      "argTypeIds": Array [
        "person",
      ],
      "description": null,
      "isStable": true,
      "isStrict": false,
      "kind": "procedure",
      "name": "person_first_name",
      "namespaceId": "c",
      "returnTypeId": "text",
      "returnsSet": false,
    },
    Object {
      "argDefaultsNum": 0,
      "argNames": Array [
        "person",
      ],
      "argTypeIds": Array [
        "person",
      ],
      "description": null,
      "isStable": true,
      "isStrict": false,
      "kind": "procedure",
      "name": "person_friends",
      "namespaceId": "c",
      "returnTypeId": "person",
      "returnsSet": true,
    },
    Object {
      "argDefaultsNum": 0,
      "argNames": Array [
        "id",
      ],
      "argTypeIds": Array [
        "int4",
      ],
      "description": null,
      "isStable": false,
      "isStrict": false,
      "kind": "procedure",
      "name": "table_mutation",
      "namespaceId": "c",
      "returnTypeId": "post",
      "returnsSet": false,
    },
    Object {
      "argDefaultsNum": 0,
      "argNames": Array [
        "id",
      ],
      "argTypeIds": Array [
        "int4",
      ],
      "description": null,
      "isStable": true,
      "isStrict": false,
      "kind": "procedure",
      "name": "table_query",
      "namespaceId": "c",
      "returnTypeId": "post",
      "returnsSet": false,
    },
    Object {
      "argDefaultsNum": 0,
      "argNames": Array [],
      "argTypeIds": Array [],
      "description": null,
      "isStable": false,
      "isStrict": false,
      "kind": "procedure",
      "name": "table_set_mutation",
      "namespaceId": "c",
      "returnTypeId": "person",
      "returnsSet": true,
    },
    Object {
      "argDefaultsNum": 0,
      "argNames": Array [],
      "argTypeIds": Array [],
      "description": null,
      "isStable": true,
      "isStrict": false,
      "kind": "procedure",
      "name": "table_set_query",
      "namespaceId": "c",
      "returnTypeId": "person",
      "returnsSet": true,
    },
    Object {
      "argDefaultsNum": 0,
      "argNames": Array [
        "a",
        "b",
        "c",
        "d",
      ],
      "argTypeIds": Array [
        "int8",
        "bool",
        "varchar",
        "_int4",
      ],
      "description": null,
      "isStable": false,
      "isStrict": true,
      "kind": "procedure",
      "name": "types_mutation",
      "namespaceId": "c",
      "returnTypeId": "bool",
      "returnsSet": false,
    },
    Object {
      "argDefaultsNum": 0,
      "argNames": Array [
        "a",
        "b",
        "c",
        "d",
      ],
      "argTypeIds": Array [
        "int8",
        "bool",
        "varchar",
        "_int4",
      ],
      "description": null,
      "isStable": true,
      "isStrict": true,
      "kind": "procedure",
      "name": "types_query",
      "namespaceId": "c",
      "returnTypeId": "bool",
      "returnsSet": false,
    },
  ],
  "types": Array [
    Object {
      "baseTypeId": "int4",
      "category": "N",
      "classId": null,
      "description": null,
      "enumVariants": null,
      "id": "an_int",
      "isNotNull": false,
      "itemId": null,
      "kind": "type",
      "name": "an_int",
      "namespaceId": "a",
      "type": "d",
    },
    Object {
      "baseTypeId": "an_int",
      "category": "N",
      "classId": null,
      "description": null,
      "enumVariants": null,
      "id": "another_int",
      "isNotNull": false,
      "itemId": null,
      "kind": "type",
      "name": "another_int",
      "namespaceId": "b",
      "type": "d",
    },
    Object {
      "baseTypeId": null,
      "category": "E",
      "classId": null,
      "description": null,
      "enumVariants": Array [
        "red",
        "green",
        "blue",
      ],
      "id": "color",
      "isNotNull": false,
      "itemId": null,
      "kind": "type",
      "name": "color",
      "namespaceId": "b",
      "type": "e",
    },
    Object {
      "baseTypeId": null,
      "category": "C",
      "classId": "compound_key",
      "description": null,
      "enumVariants": null,
      "id": "compound_key",
      "isNotNull": false,
      "itemId": null,
      "kind": "type",
      "name": "compound_key",
      "namespaceId": "c",
      "type": "c",
    },
    Object {
      "baseTypeId": null,
      "category": "C",
      "classId": "compound_type",
      "description": "Awesome feature!",
      "enumVariants": null,
      "id": "compound_type",
      "isNotNull": false,
      "itemId": null,
      "kind": "type",
      "name": "compound_type",
      "namespaceId": "c",
      "type": "c",
    },
    Object {
      "baseTypeId": "text",
      "category": "S",
      "classId": null,
      "description": null,
      "enumVariants": null,
      "id": "email",
      "isNotNull": false,
      "itemId": null,
      "kind": "type",
      "name": "email",
      "namespaceId": "b",
      "type": "d",
    },
    Object {
      "baseTypeId": null,
      "category": "C",
      "classId": "foreign_key",
      "description": null,
      "enumVariants": null,
      "id": "foreign_key",
      "isNotNull": false,
      "itemId": null,
      "kind": "type",
      "name": "foreign_key",
      "namespaceId": "a",
      "type": "c",
    },
    Object {
      "baseTypeId": null,
      "category": "C",
      "classId": "nested_compound_type",
      "description": null,
      "enumVariants": null,
      "id": "nested_compound_type",
      "isNotNull": false,
      "itemId": null,
      "kind": "type",
      "name": "nested_compound_type",
      "namespaceId": "b",
      "type": "c",
    },
    Object {
      "baseTypeId": null,
      "category": "C",
      "classId": "non_updatable_view",
      "description": null,
      "enumVariants": null,
      "id": "non_updatable_view",
      "isNotNull": false,
      "itemId": null,
      "kind": "type",
      "name": "non_updatable_view",
      "namespaceId": "a",
      "type": "c",
    },
    Object {
      "baseTypeId": null,
      "category": "C",
      "classId": "person",
      "description": null,
      "enumVariants": null,
      "id": "person",
      "isNotNull": false,
      "itemId": null,
      "kind": "type",
      "name": "person",
      "namespaceId": "c",
      "type": "c",
    },
    Object {
      "baseTypeId": null,
      "category": "C",
      "classId": "post",
      "description": null,
      "enumVariants": null,
      "id": "post",
      "isNotNull": false,
      "itemId": null,
      "kind": "type",
      "name": "post",
      "namespaceId": "a",
      "type": "c",
    },
    Object {
      "baseTypeId": null,
      "category": "C",
      "classId": "types",
      "description": null,
      "enumVariants": null,
      "id": "types",
      "isNotNull": false,
      "itemId": null,
      "kind": "type",
      "name": "types",
      "namespaceId": "b",
      "type": "c",
    },
    Object {
      "baseTypeId": null,
      "category": "C",
      "classId": "updatable_view",
      "description": null,
      "enumVariants": null,
      "id": "updatable_view",
      "isNotNull": false,
      "itemId": null,
      "kind": "type",
      "name": "updatable_view",
      "namespaceId": "b",
      "type": "c",
    },
  ],
}
`;

exports[`test will get everything needed in an introspection 2`] = `
Object {
  "attributes": Array [
    Object {
      "classId": "foreign_key",
      "description": null,
      "hasDefault": false,
      "isNotNull": false,
      "kind": "attribute",
      "name": "person_id",
      "num": 1,
      "typeId": "int4",
    },
    Object {
      "classId": "foreign_key",
      "description": null,
      "hasDefault": false,
      "isNotNull": false,
      "kind": "attribute",
      "name": "compound_key_1",
      "num": 2,
      "typeId": "int4",
    },
    Object {
      "classId": "foreign_key",
      "description": null,
      "hasDefault": false,
      "isNotNull": false,
      "kind": "attribute",
      "name": "compound_key_2",
      "num": 3,
      "typeId": "int4",
    },
    Object {
      "classId": "non_updatable_view",
      "description": null,
      "hasDefault": false,
      "isNotNull": false,
      "kind": "attribute",
      "name": "?column?",
      "num": 1,
      "typeId": "int4",
    },
    Object {
      "classId": "post",
      "description": null,
      "hasDefault": true,
      "isNotNull": true,
      "kind": "attribute",
      "name": "id",
      "num": 1,
      "typeId": "int4",
    },
    Object {
      "classId": "post",
      "description": null,
      "hasDefault": false,
      "isNotNull": true,
      "kind": "attribute",
      "name": "headline",
      "num": 2,
      "typeId": "text",
    },
    Object {
      "classId": "post",
      "description": null,
      "hasDefault": false,
      "isNotNull": false,
      "kind": "attribute",
      "name": "body",
      "num": 3,
      "typeId": "text",
    },
    Object {
      "classId": "post",
      "description": null,
      "hasDefault": false,
      "isNotNull": false,
      "kind": "attribute",
      "name": "author_id",
      "num": 4,
      "typeId": "int4",
    },
  ],
  "classes": Array [
    Object {
      "description": null,
      "id": "foreign_key",
      "isDeletable": true,
      "isInsertable": true,
      "isSelectable": true,
      "isUpdatable": true,
      "kind": "class",
      "name": "foreign_key",
      "namespaceId": "a",
      "typeId": "foreign_key",
    },
    Object {
      "description": null,
      "id": "non_updatable_view",
      "isDeletable": false,
      "isInsertable": false,
      "isSelectable": true,
      "isUpdatable": false,
      "kind": "class",
      "name": "non_updatable_view",
      "namespaceId": "a",
      "typeId": "non_updatable_view",
    },
    Object {
      "description": null,
      "id": "post",
      "isDeletable": true,
      "isInsertable": true,
      "isSelectable": true,
      "isUpdatable": true,
      "kind": "class",
      "name": "post",
      "namespaceId": "a",
      "typeId": "post",
    },
  ],
  "constraints": Array [
    Object {
      "classId": "post",
      "foreignClassId": null,
      "foreignKeyAttributeNums": null,
      "keyAttributeNums": Array [
        1,
      ],
      "kind": "constraint",
      "name": "post_pkey",
      "type": "p",
    },
  ],
  "namespaces": Array [
    Object {
      "description": "The a schema.",
      "id": "a",
      "kind": "namespace",
      "name": "a",
    },
  ],
  "procedure": Array [
    Object {
      "argDefaultsNum": 0,
      "argNames": Array [],
      "argTypeIds": Array [
        "int4",
        "int4",
      ],
      "description": "lol, add some stuff 1 mutation",
      "isStable": false,
      "isStrict": true,
      "kind": "procedure",
      "name": "add_1_mutation",
      "namespaceId": "a",
      "returnTypeId": "int4",
      "returnsSet": false,
    },
    Object {
      "argDefaultsNum": 0,
      "argNames": Array [],
      "argTypeIds": Array [
        "int4",
        "int4",
      ],
      "description": "lol, add some stuff 1 query",
      "isStable": true,
      "isStrict": true,
      "kind": "procedure",
      "name": "add_1_query",
      "namespaceId": "a",
      "returnTypeId": "int4",
      "returnsSet": false,
    },
    Object {
      "argDefaultsNum": 1,
      "argNames": Array [
        "a",
        "b",
      ],
      "argTypeIds": Array [
        "int4",
        "int4",
      ],
      "description": "lol, add some stuff 2 mutation",
      "isStable": false,
      "isStrict": true,
      "kind": "procedure",
      "name": "add_2_mutation",
      "namespaceId": "a",
      "returnTypeId": "int4",
      "returnsSet": false,
    },
    Object {
      "argDefaultsNum": 1,
      "argNames": Array [
        "a",
        "b",
      ],
      "argTypeIds": Array [
        "int4",
        "int4",
      ],
      "description": "lol, add some stuff 2 query",
      "isStable": true,
      "isStrict": true,
      "kind": "procedure",
      "name": "add_2_query",
      "namespaceId": "a",
      "returnTypeId": "int4",
      "returnsSet": false,
    },
    Object {
      "argDefaultsNum": 0,
      "argNames": Array [
        "a",
        "",
      ],
      "argTypeIds": Array [
        "int4",
        "int4",
      ],
      "description": "lol, add some stuff 3 mutation",
      "isStable": false,
      "isStrict": false,
      "kind": "procedure",
      "name": "add_3_mutation",
      "namespaceId": "a",
      "returnTypeId": "int4",
      "returnsSet": false,
    },
    Object {
      "argDefaultsNum": 0,
      "argNames": Array [
        "a",
        "",
      ],
      "argTypeIds": Array [
        "int4",
        "int4",
      ],
      "description": "lol, add some stuff 3 query",
      "isStable": true,
      "isStrict": false,
      "kind": "procedure",
      "name": "add_3_query",
      "namespaceId": "a",
      "returnTypeId": "int4",
      "returnsSet": false,
    },
    Object {
      "argDefaultsNum": 1,
      "argNames": Array [
        "",
        "b",
      ],
      "argTypeIds": Array [
        "int4",
        "int4",
      ],
      "description": "lol, add some stuff 4 mutation",
      "isStable": false,
      "isStrict": false,
      "kind": "procedure",
      "name": "add_4_mutation",
      "namespaceId": "a",
      "returnTypeId": "int4",
      "returnsSet": false,
    },
    Object {
      "argDefaultsNum": 1,
      "argNames": Array [
        "",
        "b",
      ],
      "argTypeIds": Array [
        "int4",
        "int4",
      ],
      "description": "lol, add some stuff 4 query",
      "isStable": true,
      "isStrict": false,
      "kind": "procedure",
      "name": "add_4_query",
      "namespaceId": "a",
      "returnTypeId": "int4",
      "returnsSet": false,
    },
    Object {
      "argDefaultsNum": 2,
      "argNames": Array [
        "post",
        "length",
        "omission",
      ],
      "argTypeIds": Array [
        "post",
        "int4",
        "text",
      ],
      "description": null,
      "isStable": true,
      "isStrict": false,
      "kind": "procedure",
      "name": "post_headline_trimmed",
      "namespaceId": "a",
      "returnTypeId": "text",
      "returnsSet": false,
    },
  ],
  "types": Array [
    Object {
      "baseTypeId": "int4",
      "category": "N",
      "classId": null,
      "description": null,
      "enumVariants": null,
      "id": "an_int",
      "isNotNull": false,
      "itemId": null,
      "kind": "type",
      "name": "an_int",
      "namespaceId": "a",
      "type": "d",
    },
    Object {
      "baseTypeId": null,
      "category": "C",
      "classId": "foreign_key",
      "description": null,
      "enumVariants": null,
      "id": "foreign_key",
      "isNotNull": false,
      "itemId": null,
      "kind": "type",
      "name": "foreign_key",
      "namespaceId": "a",
      "type": "c",
    },
    Object {
      "baseTypeId": null,
      "category": "C",
      "classId": "non_updatable_view",
      "description": null,
      "enumVariants": null,
      "id": "non_updatable_view",
      "isNotNull": false,
      "itemId": null,
      "kind": "type",
      "name": "non_updatable_view",
      "namespaceId": "a",
      "type": "c",
    },
    Object {
      "baseTypeId": null,
      "category": "C",
      "classId": "post",
      "description": null,
      "enumVariants": null,
      "id": "post",
      "isNotNull": false,
      "itemId": null,
      "kind": "type",
      "name": "post",
      "namespaceId": "a",
      "type": "c",
    },
  ],
}
`;
